# firstresponders-ccplugin

./: .env.example  .gitignore  .mcp.json  FAQ_COVERAGE.md  FRESHNESS_POLICY.md  README.md  SPEC.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
data/docs/: agglayer.md  bridging.md  deploy-contract-pos.md  gas-fees.md  nodes-and-validators.md  polygon-cdk.md  polygon-pos-overview.md  rpc-endpoints.md  smart-contracts.md  staked-pol.md
skills/answer-faq/: SKILL.md
skills/answer-faq/scripts/: search.py
skills/investigate-blocks/: SKILL.md
skills/investigate-blocks/scripts/: poll_and_plot.py
skills/network-health/: SKILL.md
skills/refresh-knowledge/: SKILL.md
skills/refresh-knowledge/scripts/: ingest.py
skills/summarize-upgrades/: SKILL.md
skills/summarize-upgrades/scripts/: summarize.py
src/polygon_frp/: __init__.py  docs_index.py  github_ingest.py  mcp_rpc.py  plot.py  rpc.py
tests/: test_docs_index.py  test_github_ingest.py  test_plot.py  test_rpc.py
