[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polygon-frp"
version = "0.1.0"
description = "Claude Code plugin for Polygon first responders — FAQ retrieval, upgrade summaries, live investigation."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "PyGithub>=2.3.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/polygon_frp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
